Help Dialog - Stop keys wrap on zoom
When zooming web-page out, key layouts overlapped; stopped so help page
displays better at different zoom levels

--- a/css/keys_dialog.css
+++ b/css/keys_dialog.css
@@ -240,7 +240,7 @@ dialog .spacer_box {
     color: #7d7d7d;
     font-size: 11px;
     text-align: left;
-    width: 165px;
+    min-width: 165px;
 }
 
 .noline {
